--- a/Project/index.html
+++ b/Project/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="backgroundMain">
-    <h1 style="text-align: center"><b>Головна страниц</b></h1>
+    <h1 style="text-align: center"><b>Головна страниця</b></h1>
     <div class="linkResume">
         <p class="borderLinkMain"><a style="color: yellow" href="resume.html">Резюме</a></p>
 
