--- a/Project/index.html
+++ b/Project/index.html
@@ -7,12 +7,73 @@
 
 </head>
 
-<body class="backgroundMain">
-    <h1 style="text-align: center"><b>Головна страниця</b></h1>
-    <div class="linkResume">
-        <p class="borderLinkMain"><a style="color: yellow" href="resume.html">Резюме</a></p>
+<div class="contacts divBorder">
+    <h1>Контактні реквізити</h1>
+</div>
 
+<body class="tbody">
+<div class="header divBorder">
+    <h1>Логотип</h1>
+</div>
+
+<div class="sidebar divBorder">
+    <h4>Меню</h4>
+    <ul>
+        <li><a href=""></a>1</li>
+        <li><a href=""></a>2</li>
+        <li><a href=""></a>3</li>
+        <li><a href=""></a>4</li>
+    </ul>
+</div>
+
+<div class="sidebar1 divBorder">
+    <h4>Новини</h4>
+    <p>Спец новики, найдений голубий мальчик з ім'ям Тар**с. По опису він має чорну жопу
+        та читає цей текст бо він дуже спритний і баче весь текст на сторінке</p>
+</div>
+
+<div class="container divBorder">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi architecto asperiores at, atque autem
+        deserunt distinctio dolorum eaque incidunt itaque laudantium minima molestiae mollitia natus rem saepe sint
+        vitae. Amet aut cupiditate dignissimos dolorum et iusto quas recusandae, rem totam! Asperiores et
+        exercitationem laborum minima officia officiis quisquam repellat sunt, tempore! Doloremque eligendi id,
+        maxime nemo nostrum quaerat qui quidem rem saepe sunt! Accusantium, ad adipisci autem consequatur cupiditate
+        debitis, deleniti deserunt dicta doloremque eligendi exercitationem fuga fugiat harum incidunt ipsam iusto
+        laudantium maxime molestias necessitatibus saepe unde vitae voluptatibus. Asperiores aut autem cumque ex
+        exercitationem explicabo maiores quibusdam repellat. Cum dolores esse hic in omnis quasi quos tempore? At
+        atque aut autem consequuntur cupiditate deleniti deserunt distinctio dolore dolorum eaque eius
+        exercitationem harum id magni minima molestias neque nostrum porro praesentium quas qui quibusdam rem
+        sapiente temporibus ut vel, velit veniam. Aliquam autem commodi error magni repellat reprehenderit?
+        Ullam?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi architecto asperiores at, atque autem
+        deserunt distinctio dolorum eaque incidunt itaque laudantium minima molestiae mollitia natus rem saepe sint
+        vitae. Amet aut cupiditate dignissimos dolorum et iusto quas recusandae, rem totam! Asperiores et
+        exercitationem laborum minima officia officiis quisquam repellat sunt, tempore! Doloremque eligendi id,
+        maxime nemo nostrum quaerat qui quidem rem saepe sunt! Accusantium, ad adipisci autem consequatur cupiditate
+        debitis, deleniti deserunt dicta doloremque eligendi exercitationem fuga fugiat harum incidunt ipsam iusto
+        laudantium maxime molestias necessitatibus saepe unde vitae voluptatibus. Asperiores aut autem cumque ex
+        exercitationem explicabo maiores quibusdam repellat. Cum dolores esse hic in omnis quasi quos tempore? At
+        atque aut autem consequuntur cupiditate deleniti deserunt distinctio dolore dolorum eaque eius
+        exercitationem harum id magni minima molestias neque nostrum porro praesentium quas qui quibusdam rem
+        sapiente temporibus ut vel, velit veniam. Aliquam autem commodi error magni repellat reprehenderit?
+        Ullam?</p>
+</div>
+
+<div class="footer divBorder">Copyright 2021 &copy; Всі права захищені.</div>
+
+
+<div class="ne">
+    <div class="first divBorder">
+        <p>gondon</p>
     </div>
+
+    <div class="second divBorder">
+        <p>ya</p>
+    </div>
+</div>
+<!--    <div class="linkResume">
+            <p class="borderLinkMain"><a style="color: yellow" href="resume.html">Резюме</a></p>
+    </div>-->
 
 </body>
 
