--- a/Project/index.html
+++ b/Project/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk-UA">
 <head>
     <meta charset="utf-8">
     <title>Main page</title>
@@ -7,23 +7,23 @@
 
 </head>
 
-<div class="contacts divBorder">
-    <div>
-        <p>Контактні реквізити</p>
-         <a href="">Резюме</a><br>
-         <a href="">Фотошоп</a>
+<body class="tbody">
+
+<div class="contacts">
+    <div class="text cw">
+        <p>Контактні дані</p>
+        <a href="mailto:maximgrigorovua@gmail.com" class="shrift">maximgrigorovua@gmail.com</a><br>
+        <a href="tel:0950002900" class="shrift">095-000-29-00</a>
     </div>
 </div>
 
-<body class="tbody">
-<div class="header divBorder">
-    <h1>Логотип</h1>
+<div class="header text">
+    <h1>MyName</h1>
 </div>
 
-
 <div class="ne">
-    <div class="first divBorder">
-        <div class="menu">
+    <div class="first">
+        <div class="">
             <div class="category-wrap">
                 <h3>Меню</h3>
                 <ul>
@@ -35,7 +35,7 @@
                 </ul>
             </div>
         </div>
-        <div class="devs divBorder">
+        <div class="devs">
             <p>Лічильник</p>
         </div>
     </div>
