--- a/Project/index.html
+++ b/Project/index.html
@@ -11,9 +11,9 @@
 
 <div class="contacts">
     <div class="text cw">
-        <p>Контактні дані</p>
-        <a href="mailto:maximgrigorovua@gmail.com" class="shrift">maximgrigorovua@gmail.com</a><br>
-        <a href="tel:0950002900" class="shrift">095-000-29-00</a>
+        <h3 class="asd">Контактні дані</h3>
+        <a href="mailto:maximgrigorovua@gmail.com" class="fontCursive">maximgrigorovua@gmail.com</a><br>
+        <a href="tel:0950000000" class="fontCursive">095-000-00-00</a>
     </div>
 </div>
 
@@ -21,8 +21,8 @@
     <h1>MyName</h1>
 </div>
 
-<div class="ne">
-    <div class="first">
+<div class="main">
+    <div class="align">
         <div class="">
             <div class="category-wrap">
                 <h3>Меню</h3>
@@ -35,14 +35,14 @@
                 </ul>
             </div>
         </div>
-        <div class="devs">
+        <div class="counter">
             <p>Лічильник</p>
         </div>
     </div>
-    <div class="second divBorder">
+    <div class="content">
         <p>Основний вміст</p>
     </div>
-    <div class="third divBorder">
+    <div class="ads">
         <p>Реклама</p>
     </div>
 </div>
