--- a/Project/index.html
+++ b/Project/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk-UA">
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Main page</title>
     <link rel="stylesheet" href="style.css">
 
@@ -47,7 +47,7 @@
     </div>
 </div>
 
-<div class="footer divBorder">Copyright 2021 &copy; Всі права захищені</div>
+<div class="footer">Copyright 2021 &copy; Всі права захищені</div>
 
 <!--    <div class="linkResume">
             <p class="borderLinkMain"><a style="color: yellow" href="resume.html">Резюме</a></p>
