--- a/Project/index.html
+++ b/Project/index.html
@@ -10,7 +10,7 @@
 <body class="tbody">
 
 <div class="contacts">
-    <div class="text cw">
+    <div class="font cw">
         <h3 class="asd">Контактні дані</h3>
         <a href="mailto:maximgrigorovua@gmail.com" class="fontCursive">maximgrigorovua@gmail.com</a><br>
         <a href="tel:0950000000" class="fontCursive">095-000-00-00</a>
@@ -39,11 +39,16 @@
             <p>Лічильник</p>
         </div>
     </div>
-    <div class="content">
+    <div class="content ">
         <p>Основний вміст</p>
+        <img src="images/m.jpg" width="720" height="405" alt="img">
+        <img src="images/m.jpg" width="720" height="405" alt="img">
+        <img src="images/m.jpg" width="720" height="405" alt="img">
     </div>
     <div class="ads">
-        <p>Реклама</p>
+        <img src="images/12.png" width="150" height="226" alt="ad"><br>
+        <img src="images/12.png" width="150" height="226" alt="ad"><br>
+        <img src="images/12.png" width="150" height="226" alt="ad"><br>
     </div>
 </div>
 
