--- a/Project/index.html
+++ b/Project/index.html
@@ -2,7 +2,7 @@
 <html lang="uk-UA">
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-    <title>Main page</title>
+    <title>Travel</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -18,7 +18,7 @@
 </div>
 
 <div class="header text">
-    <h1>MyName</h1>
+    <h1>toTravel</h1>
 </div>
 
 <div class="main">
@@ -28,10 +28,10 @@
                 <h3>Меню</h3>
                 <ul>
                     <li><a href="resume.html">Резюме</a></li>
-                    <li><a href="">Фотошоп</a></li>
-                    <li><a href="">Книги</a></li>
-                    <li><a href="">Журналы</a></li>
-                    <li><a href="">Картинки</a></li>
+                    <li><a href="french.html">Франція</a></li>
+                    <li><a href="spain.html">Іспанія</a></li>
+                    <li><a href="latvia.html">Чехія</a></li>
+                    <li><a href="italy.html">Італія</a></li>
                 </ul>
             </div>
         </div>
@@ -40,9 +40,56 @@
         </div>
     </div>
     <div class="content">
-        <img src="images/m.jpg" width="720" height="405" alt="img">
-        <img src="images/m.jpg" width="720" height="405" alt="img">
-        <img src="images/m.jpg" width="720" height="405" alt="img">
+        <div class="fontCursive next">
+            <img src="images/Msc.jpg" width="720" height="480" alt="img">
+            <h2 class="borderForCountry">Франція</h2>
+            <div class="change">
+                <p class="someText"><em><b>Le Mont-Saint-Michel</b></em><br>
+                    Невеликий скелястий острів, перетворений в острів-фортеця, на північно-західному узбережжі Франції.
+                    Два рази на місячну добу (через 24 години 50 хвилин) в бухті спостерігаються припливи і відливи,
+                    найсильніші на узбережжі Європи і другі по амплітуді на всій земній кулі.
+                </p>
+            </div>
+        </div>
+
+
+        <div class="fontCursive next">
+            <img src="images/Nerja.jpg" width="720" height="480" alt="img">
+            <h2 class="borderForCountry">Іспанія</h2>
+            <div class="change">
+                <p class="someText"><em><b>Nerja</b></em><br>
+                    Місто було засноване римлянами під назвою Detunda. У VIII столітті місто потрапило під владу арабів
+                    і отримав назву Narixa (в перекладі «бурхлива весна»), від якого і відбулася сучасна
+                    назва. В період арабського панування Нерха була відома виробництвом
+                    виробів з шовку і розвиненим сільським господарством.
+                </p>
+            </div>
+        </div>
+
+        <div class="fontCursive next">
+            <img src="images/czech.jpg" width="720" height="480" alt="img">
+            <h2 class="borderForCountry">Чехія</h2>
+            <div class="change">
+                <p class="someText"><em><b>Прага</b></em><br>
+                    Статутний місто і столиця Чеської Республіки, адміністративний центр Центральночеський краю
+                    і двох його районів: Прага-Схід і Прага-Захід. утворює самостійну
+                    адміністративно-територіальну одиницю країни.
+                </p>
+            </div>
+        </div>
+
+        <div class="fontCursive next">
+            <img src="images/rome.jpg" width="720" height="480" alt="img">
+            <h2 class="borderForCountry">Італія</h2>
+            <div class="change">
+                <p class="someText"><em><b>Рим</b></em><br>
+                    Столиця і найбільше місто Італії (по населенню агломерації поступається Мілану і Неаполя).
+                    Адміністративний центр області Лаціо і однойменної територіальної одиниці Рим,
+                    прирівняної до провінції. Розташований на річці Тибр.
+                </p>
+            </div>
+        </div>
+
     </div>
     <div class="ads">
         <img src="images/12.png" width="150" height="226" alt="ad"><br>
