--- a/Project/index.html
+++ b/Project/index.html
@@ -30,7 +30,7 @@
                     <li><a href="resume.html">Резюме</a></li>
                     <li><a href="french.html">Франція</a></li>
                     <li><a href="spain.html">Іспанія</a></li>
-                    <li><a href="latvia.html">Чехія</a></li>
+                    <li><a href="czech.html">Чехія</a></li>
                     <li><a href="italy.html">Італія</a></li>
                 </ul>
             </div>
@@ -49,6 +49,11 @@
                     Два рази на місячну добу (через 24 години 50 хвилин) в бухті спостерігаються припливи і відливи,
                     найсильніші на узбережжі Європи і другі по амплітуді на всій земній кулі.
                 </p>
+                <div class="box">
+                    <div class="linkToCountry paintT textInBox">
+                        <p><a href="french.html" target="_blank">Читати далі</a></p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -63,6 +68,11 @@
                     назва. В період арабського панування Нерха була відома виробництвом
                     виробів з шовку і розвиненим сільським господарством.
                 </p>
+                <div class="box">
+                    <div class="linkToCountry paintT textInBox">
+                        <p><a href="spain.html" target="_blank">Читати далі</a></p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -75,6 +85,11 @@
                     і двох його районів: Прага-Схід і Прага-Захід. утворює самостійну
                     адміністративно-територіальну одиницю країни.
                 </p>
+                <div class="box">
+                    <div class="linkToCountry paintT textInBox">
+                        <p><a href="czech.html" target="_blank">Читати далі</a></p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -87,6 +102,11 @@
                     Адміністративний центр області Лаціо і однойменної територіальної одиниці Рим,
                     прирівняної до провінції. Розташований на річці Тибр.
                 </p>
+                <div class="box">
+                    <div class="linkToCountry paintT textInBox">
+                        <p><a href="italy.html" target="_blank">Читати далі</a></p>
+                    </div>
+                </div>
             </div>
         </div>
 
