--- a/Project/index.html
+++ b/Project/index.html
@@ -35,8 +35,32 @@
                 </ul>
             </div>
         </div>
-        <div class="counter">
-            <p>Лічильник</p>
+        <div class="">
+            <div>
+                <div class="card">
+                    <p><i></i></p>
+                    <h3>4+</h3>
+                    <p>Країни</p>
+                </div>
+            </div>
+        </div>
+        <div class="">
+            <div>
+                <div class="card">
+                    <p><i></i></p>
+                    <h3>20+</h3>
+                    <p>Міст</p>
+                </div>
+            </div>
+        </div>
+        <div class="">
+            <div>
+                <div class="card">
+                    <p><i></i></p>
+                    <h3>10+</h3>
+                    <p>Задоволені клієнти</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="content">
