--- a/Project/index.html
+++ b/Project/index.html
@@ -4,21 +4,20 @@
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Travel</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body class="tbody">
 
-<div class="contacts">
-    <div class="font cw">
+<div class="first">
+    <div class="header text">
+        <h1>toTravel</h1>
+    </div>
+
+    <div class="cont cw">
         <h3 class="asd">Контактні дані</h3>
         <a href="mailto:maximgrigorovua@gmail.com" class="fontCursive">maximgrigorovua@gmail.com</a><br>
         <a href="tel:0950000000" class="fontCursive">095-000-00-00</a>
     </div>
-</div>
-
-<div class="header text">
-    <h1>toTravel</h1>
 </div>
 
 <div class="main">
@@ -87,8 +86,8 @@
             <h2 class="borderForCountry">Іспанія</h2>
             <div class="change">
                 <p class="someText"><em><b>Nerja</b></em><br>
-                    Місто було засноване римлянами під назвою Detunda. У VIII столітті місто потрапило під владу арабів
-                    і отримав назву Narixa (в перекладі «бурхлива весна»), від якого і відбулася сучасна
+                    Місто було засноване римлянами під назвою Дєтунда. У VIII столітті місто потрапило під владу арабів
+                    і отримав назву Нарікса (в перекладі «бурхлива весна»), від якого і відбулася сучасна
                     назва. В період арабського панування Нерха була відома виробництвом
                     виробів з шовку і розвиненим сільським господарством.
                 </p>
@@ -141,6 +140,7 @@
         <img src="images/12.png" width="150" height="226" alt="ad"><br>
     </div>
 </div>
+
 
 <div class="footer">Copyright 2021 &copy; Всі права захищені</div>
 
