--- a/Project/french.html
+++ b/Project/french.html
@@ -2,9 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <title>French</title>
+    <style>
+        .first {
+            display: flex;
+            flex-flow: row nowrap;
+            background-color: #3fc7c7;
+        }
+        .cont{
+            text-align: center;
+            flex-grow: 5;
+            box-sizing: border-box;
+            margin-left: 45px;
+            background-color: #d6ff00;
+        }
+    </style>
 </head>
 <body>
+    <div class="container">
+        <button class="btn btn-primary">Hello world</button>
+    </div>
 
+    <div class="first">
+        <div class="">
+            <p>block1</p>
+        </div>
+
+        <div class="cont">
+            <p>block2</p>
+        </div>
+    </div>
+
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
 </html>
