--- a/Project/czech.html
+++ b/Project/czech.html
@@ -3,8 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Czech</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div id="Czech" class="fontCursive next toCountry">
+    <img src="images/czech.jpg" width="720" height="480" alt="img">
+    <h2 class="borderForCountry">Чехія</h2>
+    <div class="change">
+        <p class="someText"><em><b>Прага</b></em><br>
+            Статутний місто і столиця Чеської Республіки, адміністративний центр Центральночеський краю
+            і двох його районів: Прага-Схід і Прага-Захід. утворює самостійну
+            адміністративно-територіальну одиницю країни.
+        </p>
+        <div class="">
+            <div class="linkToCountry paintT textInBox">
+                <p><a href="index.html">Купити поїздку</a></p>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
