--- a/Project/french.html
+++ b/Project/french.html
@@ -2,20 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+          integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+          crossorigin="anonymous">
     <title>French</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
-        <button class="border-5"><a href="index.html">К главной</a></button>
+<div id="France" class="fontCursive next toCountry">
+    <img src="images/Msc.jpg" width="720" height="480" alt="img">
+    <h2>Франція</h2>
+
+    <div class="change">
+        <p class="someText"><em><b>Le Mont-Saint-Michel</b></em><br>
+            Невеликий скелястий острів, перетворений в острів-фортеця, на північно-західному узбережжі Франції.
+            Два рази на місячну добу (через 24 години 50 хвилин) в бухті спостерігаються припливи і відливи,
+            найсильніші на узбережжі Європи і другі по амплітуді на всій земній кулі.Найбільша в
+            Європі висота припливу (до 14 метрів [6]),висока швидкість припливної хвилі і хиткі піски дна,
+            спільно з крутизною скелі протягом століть створювалисприятливі умови для
+            усамітнення і захисту від нападу ворога. Спочатку гора знаходилася на суші, оточена
+            лісами, і була місцем проживання племен кельтів, на якій друїди здійснювали свої
+            обряди. Потім, в результаті ерозії
+            грунту, викликаної діяльністю моря і трьох впадають у нього, море наступило на сушу.
+            Одна з річок - Куенон (фр.),
+            впадає в море біля самої дамби, - являє собою тепер адміністративний кордон між
+            Нормандією і Бретанью. В даний час водний режим бухти викликає серйозні
+            побоювання, в тому числі викликані складною екологічною обстановкою
+            (піщані наноси поступово з'єднують острів з материком). Для запобігання цьому було прийнято рішення
+            частково ліквідувати дамбу і замінити її мостом [1], з цією ж метою було
+            реконструйовано гребля в гирлі річки Куенон. В результаті вжитих заходів річка
+            зараз розділяється на два
+            рукава і омиває острів з двох сторін.
+        </p>
     </div>
 
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-        crossorigin="anonymous"></script>
+    <div class="linkToCountry paintT textInBox">
+        <p><a href="index.html">Купити Білети</a></p>
+    </div>
+</div>
+
 </body>
 </html>
