--- a/Project/index.html
+++ b/Project/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk-UA">
 <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
     <title>Travel</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -62,15 +62,15 @@
             </div>
         </div>
     </div>
+
     <div class="content">
-        <div class="fontCursive next">
+
+        <div id="France" class="fontCursive next">
             <img src="images/Msc.jpg" width="720" height="480" alt="img">
             <h2 class="borderForCountry">Франція</h2>
             <div class="change">
                 <p class="someText"><em><b>Le Mont-Saint-Michel</b></em><br>
                     Невеликий скелястий острів, перетворений в острів-фортеця, на північно-західному узбережжі Франції.
-                    Два рази на місячну добу (через 24 години 50 хвилин) в бухті спостерігаються припливи і відливи,
-                    найсильніші на узбережжі Європи і другі по амплітуді на всій земній кулі.
                 </p>
                 <div class="box">
                     <div class="linkToCountry paintT textInBox">
@@ -80,16 +80,13 @@
             </div>
         </div>
 
-
-        <div class="fontCursive next">
+        <div id="Spain" class="fontCursive next">
             <img src="images/Nerja.jpg" width="720" height="480" alt="img">
             <h2 class="borderForCountry">Іспанія</h2>
             <div class="change">
                 <p class="someText"><em><b>Nerja</b></em><br>
                     Місто було засноване римлянами під назвою Дєтунда. У VIII столітті місто потрапило під владу арабів
-                    і отримав назву Нарікса (в перекладі «бурхлива весна»), від якого і відбулася сучасна
-                    назва. В період арабського панування Нерха була відома виробництвом
-                    виробів з шовку і розвиненим сільським господарством.
+                    і отримав назву Нарікса (в перекладі «бурхлива весна»)
                 </p>
                 <div class="box">
                     <div class="linkToCountry paintT textInBox">
@@ -99,14 +96,13 @@
             </div>
         </div>
 
-        <div class="fontCursive next">
+        <div id="Czech" class="fontCursive next">
             <img src="images/czech.jpg" width="720" height="480" alt="img">
             <h2 class="borderForCountry">Чехія</h2>
             <div class="change">
                 <p class="someText"><em><b>Прага</b></em><br>
                     Статутний місто і столиця Чеської Республіки, адміністративний центр Центральночеський краю
-                    і двох його районів: Прага-Схід і Прага-Захід. утворює самостійну
-                    адміністративно-територіальну одиницю країни.
+                    і двох його районів:
                 </p>
                 <div class="box">
                     <div class="linkToCountry paintT textInBox">
@@ -116,14 +112,12 @@
             </div>
         </div>
 
-        <div class="fontCursive next">
+        <div id="Italy" class="fontCursive next">
             <img src="images/rome.jpg" width="720" height="480" alt="img">
             <h2 class="borderForCountry">Італія</h2>
             <div class="change">
                 <p class="someText"><em><b>Рим</b></em><br>
                     Столиця і найбільше місто Італії (по населенню агломерації поступається Мілану і Неаполя).
-                    Адміністративний центр області Лаціо і однойменної територіальної одиниці Рим,
-                    прирівняної до провінції. Розташований на річці Тибр.
                 </p>
                 <div class="box">
                     <div class="linkToCountry paintT textInBox">
@@ -134,7 +128,8 @@
         </div>
 
     </div>
-    <div class="ads">
+
+    <div id="Ad">
         <img src="images/12.png" width="150" height="226" alt="ad"><br>
         <img src="images/12.png" width="150" height="226" alt="ad"><br>
         <img src="images/12.png" width="150" height="226" alt="ad"><br>
@@ -143,10 +138,6 @@
 
 
 <div class="footer">Copyright 2021 &copy; Всі права захищені</div>
-
-<!--    <div class="linkResume">
-            <p class="borderLinkMain"><a style="color: yellow" href="resume.html">Резюме</a></p>
-    </div>-->
 
 </body>
 
