--- a/Project/italy.html
+++ b/Project/italy.html
@@ -3,8 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Italy</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+<div id="Italy" class="fontCursive next toCountry">
+    <img src="images/rome.jpg" width="720" height="480" alt="img">
+    <h2 class="borderForCountry">Італія</h2>
+    <div class="change">
+        <p class="someText"><em><b>Рим</b></em><br>
+            Столиця і найбільше місто Італії (по населенню агломерації поступається Мілану і Неаполя).
+            Адміністративний центр області Лаціо і однойменної територіальної одиниці Рим,
+            прирівняної до провінції. Розташований на річці Тибр.
+        </p>
+        <div class="">
+            <div class="linkToCountry paintT textInBox">
+                <p><a href="index.html">Купити поїздку</a></p>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
