--- a/Project/resume.html
+++ b/Project/resume.html
@@ -19,7 +19,7 @@
         <p><b>Навички:</b></p>
     </div>
 
-    <table>
+    <table class="">
       <tr class="boxTable">
           <th>Java</th>
           <th>MySql</th>
@@ -34,10 +34,12 @@
       </tr>
     </table>
 
-    <div class="newFont">
-        <br>
-        <p class="borderLinkResume"><a style="color: black" href="index.html">На головну</a></p>
+    <div class="box">
+        <div class="linkToCountry paintT textInBox">
+            <p><a href="index.html">Купити Білети</a></p>
+        </div>
     </div>
+
 </body>
 
 </html>
