--- a/Project/spain.html
+++ b/Project/spain.html
@@ -3,8 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Spain</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div id="Spain" class="fontCursive next toCountry">
+    <img src="images/Nerja.jpg" width="720" height="480" alt="img">
+    <h2 class="">Іспанія</h2>
+    <div class="change">
+        <p class="someText"><em><b>Nerja</b></em><br>
+            Місто було засноване римлянами під назвою Дєтунда. У VIII столітті місто потрапило під владу арабів
+            і отримав назву Нарікса (в перекладі «бурхлива весна»), від якого і відбулася сучасна
+            назва. В період арабського панування Нерха була відома виробництвом
+            виробів з шовку і розвиненим сільським господарством.
+        </p>
+        <div class="">
+            <div class="linkToCountry paintT textInBox">
+                <p><a href="index.html">Купити поїздку</a></p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
