--- a/Project/countries/french.html
+++ b/Project/countries/french.html
@@ -6,12 +6,12 @@
           integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
           crossorigin="anonymous">
     <title>French</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
 <div id="France" class="fontCursive next toCountry">
-    <img src="images/Msc.jpg" width="720" height="480" alt="img">
+    <img src="../images/Msc.jpg" width="720" height="480" alt="img">
     <h2>Франція</h2>
 
     <div class="change">
@@ -38,7 +38,7 @@
     </div>
 
     <div class="linkToCountry paintT textInBox">
-        <p><a href="index.html">Купити Білети</a></p>
+        <p><a href="../index.html">Купити Білети</a></p>
     </div>
 </div>
 
