--- a/Project/countries/italy.html
+++ b/Project/countries/italy.html
@@ -6,12 +6,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
           crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 
 </head>
 <body>
 <div id="Italy" class="fontCursive next toCountry">
-    <img src="images/rome.jpg" width="720" height="480" alt="img">
+    <img src="../images/rome.jpg" width="720" height="480" alt="img">
     <h2 class="borderForCountry">Італія</h2>
     <div class="change">
         <p class="someText"><em><b>Рим</b></em><br>
@@ -21,7 +21,7 @@
         </p>
         <div class="">
             <div class="linkToCountry paintT textInBox">
-                <p><a href="index.html">Купити поїздку</a></p>
+                <p><a href="../index.html">Купити поїздку</a></p>
             </div>
         </div>
     </div>
