--- a/Project/index.html
+++ b/Project/index.html
@@ -27,10 +27,10 @@
                 <h3>Меню</h3>
                 <ul>
                     <li><a href="resume.html">Резюме</a></li>
-                    <li><a href="french.html">Франція</a></li>
-                    <li><a href="spain.html">Іспанія</a></li>
-                    <li><a href="czech.html">Чехія</a></li>
-                    <li><a href="italy.html">Італія</a></li>
+                    <li><a href="countries/french.html">Франція</a></li>
+                    <li><a href="countries/spain.html">Іспанія</a></li>
+                    <li><a href="countries/czech.html">Чехія</a></li>
+                    <li><a href="countries/italy.html">Італія</a></li>
                 </ul>
             </div>
         </div>
@@ -74,7 +74,7 @@
                 </p>
                 <div class="box">
                     <div class="linkToCountry paintT textInBox">
-                        <p><a href="french.html" target="_blank">Читати далі</a></p>
+                        <p><a href="countries/french.html" target="_blank">Читати далі</a></p>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                 </p>
                 <div class="box">
                     <div class="linkToCountry paintT textInBox">
-                        <p><a href="spain.html" target="_blank">Читати далі</a></p>
+                        <p><a href="countries/spain.html" target="_blank">Читати далі</a></p>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                 </p>
                 <div class="box">
                     <div class="linkToCountry paintT textInBox">
-                        <p><a href="czech.html" target="_blank">Читати далі</a></p>
+                        <p><a href="countries/czech.html" target="_blank">Читати далі</a></p>
                     </div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                 </p>
                 <div class="box">
                     <div class="linkToCountry paintT textInBox">
-                        <p><a href="italy.html" target="_blank">Читати далі</a></p>
+                        <p><a href="countries/italy.html" target="_blank">Читати далі</a></p>
                     </div>
                 </div>
             </div>
