--- a/Project/index.html
+++ b/Project/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Travel</title>
     <link rel="stylesheet" href="style.css">
+    <script src="lr4.js"></script>
+
 </head>
 
 <body class="tbody">
@@ -26,41 +28,38 @@
             <div class="category-wrap">
                 <h3>Меню</h3>
                 <ul>
-                    <li><a href="resume.html">Резюме</a></li>
-                    <li><a href="countries/french.html">Франція</a></li>
-                    <li><a href="countries/spain.html">Іспанія</a></li>
-                    <li><a href="countries/czech.html">Чехія</a></li>
-                    <li><a href="countries/italy.html">Італія</a></li>
+                    <li><a target="_blank" href="resume.html">Резюме</a></li>
+                    <li><a target="_blank" href="countries/french.html">Франція</a></li>
+                    <li><a target="_blank" href="countries/spain.html">Іспанія</a></li>
+                    <li><a target="_blank" href="countries/czech.html">Чехія</a></li>
+                    <li><a target="_blank" href="countries/italy.html">Італія</a></li>
                 </ul>
             </div>
         </div>
+
+
+
         <div class="">
             <div>
-                <div class="card">
-                    <p><i></i></p>
-                    <h3>4+</h3>
-                    <p>Країни</p>
+                <div class="">
+                    <form id="form">
+                        <input class="toInput" type="text" id="text" prefix="asd" placeholder="YY-MM-DD" />
+                        <br/>
+                        <button type="submit" id="submit" onclick="alerted()">submit</button>
+                        <button type="reset">reset</button>
+                    </form>
+                </div>
+
+                <div class="">
+                    <br/>
+                    <button><a href="JavaScript.html">Java Script</a></button>
+                    <br><br/>
+                    <button type="" id="" onclick="passedTime()">Time Passed</button>
                 </div>
             </div>
         </div>
-        <div class="">
-            <div>
-                <div class="card">
-                    <p><i></i></p>
-                    <h3>20+</h3>
-                    <p>Міст</p>
-                </div>
-            </div>
-        </div>
-        <div class="">
-            <div>
-                <div class="card">
-                    <p><i></i></p>
-                    <h3>10+</h3>
-                    <p>Задоволені клієнти</p>
-                </div>
-            </div>
-        </div>
+
+
     </div>
 
     <div class="content">
