--- a/Project/index.html
+++ b/Project/index.html
@@ -22,6 +22,11 @@
         <a href="mailto:maximgrigorovua@gmail.com" class="fontCursive">maximgrigorovua@gmail.com</a><br>
         <a href="tel:0950000000" class="fontCursive">095-000-00-00</a>
     </div>
+    <div class="cont cw">
+        <h3 class="asd">Контактні дані</h3>
+        <a href="mailto:maximgrigorovua@gmail.com" class="fontCursive">maximgrigorovua@gmail.com</a><br>
+        <a href="tel:0950000000" class="fontCursive">095-000-00-00</a>
+    </div>
 </div>
 
 <div class="main">
